Fixed appearance rule to remove input inner shadow on iOS

--- a/index.css
+++ b/index.css
@@ -103,7 +103,7 @@
   font-size: 16px;
   outline: none;
   border-radius: 0;
-  appearance: none;
+  -webkit-appearance: none;
 }
 
 .control-input--text:focus {
